--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,7 @@ $taskColor: #98C540;
 $darkSpringGreen: #2E6B48;
 $darkJungleGreen: #12261D;
 $prussianBlue: #122E42;
+$forestGreen: forestgreen;
 
 $errorColor: #cc0000;
 
