--- a/src/app/components/modals/my-account/my-account.component.html
+++ b/src/app/components/modals/my-account/my-account.component.html
@@ -5,40 +5,40 @@
     <div class="name modal-text title-container">
         <form  name="form"
         (ngSubmit)="f.form.valid && onSubmit()"
-        #f="ngForm"
-        novalidate>
+        #f="ngForm">
 
-            <div class="menu-item">Change Password</div>
-            <input
-            type="password"
-            class="form-control"
-            name="password"
-            [(ngModel)]="this.form.password"
-            required
-            minlength="6"
-            #password="ngModel"
-            [ngClass]="{ 'is-valid': (submitted || this.form.password.dirty) && !this.form.password.errors, 'is-invalid': (submitted || this.form.password.dirty) && this.form.password.errors }"
-            />
-            <app-password-strength [passwordToCheck]="this.form.password" (passwordStrength)="onPasswordStrengthChanged($event)"></app-password-strength>
-
-            <div class="alert-danger" *ngIf="form.password.errors">
-                <div *ngIf="form.password.errors['required']">
-                  Password is required
-                </div>
-                <div *ngIf="form.password.errors['minlength']">
-                  Password must be at least 8 characters
-                </div>
+            <div class="item-title">Change Password</div>
+            <div class="item-section">
+                <div class="item-sub-title"> Enter a new Password</div>
+                <input
+                type="password"
+                class="form-control"
+                name="password"
+                [(ngModel)]="this.form.password"
+                required
+                minlength="6"
+                #password="ngModel"
+                [ngClass]="{ 'is-valid': (this.form.password.dirty) && !this.form.password.errors, 'is-invalid': (this.form.password.dirty) && this.form.password.errors }"
+                />
+                <app-password-strength [passwordToCheck]="this.form.password" (passwordStrength)="onPasswordStrengthChanged($event)"></app-password-strength>
+    
+                
+                    <div *ngIf="form.password.errors['required']">
+                      Password is required
+                    </div>
+                    <div *ngIf="form.password.errors['minlength']">
+                      Password must be at least 8 characters
+                    </div>
+               
+                <div class="item-sub-title">Confirm Password</div>          
+                <input  
+                type="password"
+                class="form-control" 
+                [(ngModel)]="this.form.confirmPassword" 
+                required/>
+    
             </div>
-
-            <label> Confirm Password</label>
-          
-            <input  
-            type="password"
-            class="form-control" 
-            [(ngModel)]="this.form.confirmPassword" 
-            required/>
-
-            <div class="form-group">
+            <div class="form-group submit-form">
                 <button class="btn btn-primary btn-block"> Submit </button>
             </div> 
         </form>
