--- a/src/app/components/display-tags/display-tags.component.scss
+++ b/src/app/components/display-tags/display-tags.component.scss
@@ -6,6 +6,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: left;
+    width: max-content;
 
     .tag {
         padding: 2px 10px 2px 10px;
