--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,7 +125,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     .modal-header {
         color: white;
         border-bottom: none;
-        background: $taskColor;
+        background: $forestGreen;
+        opacity: 0.8;
     }
 
     .modal-footer {
@@ -140,9 +141,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         border-radius: 30px 0;
         font-size: 18px;
         padding: 5px 20px 5px 20px;
-        background: $taskColor;
+        background: $forestGreen;
+        opacity: 0.8;
         border: none;
         outline: none;
+    }
+
+    .btn-success:hover,
+    .btn-danger:hover {
+        opacity: 1;
     }
 
     .btn-danger {
@@ -152,6 +159,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         border-radius: 0 30px;
         font-size: 18px;
         padding: 5px 20px 5px 20px;
+        opacity: 0.8;
         background: $listColor;
         border: none;
         outline: none;
