--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,13 @@
 
-$listColor: 	rgb(128,0,128);
+$listColor: rgb(128,0,128);
 $taskColor: #98C540;
 
 $darkSpringGreen: #2E6B48;
 $darkJungleGreen: #12261D;
 $prussianBlue: #122E42;
 $forestGreen: forestgreen;
+
+$orange: orange;
 
 $errorColor: #cc0000;
 
