Add new tags functionality done (frontend)

--- a/src/app/components/modals/my-account/my-account.component.scss
+++ b/src/app/components/modals/my-account/my-account.component.scss
@@ -79,7 +79,7 @@
     justify-content: flex-end;
     align-items: center;
     width: 100%;
-    color: red;
+    color: $errorColor;
     height: 25px;
     font-weight: 400;
     font-size: 16px;
