--- a/src/app/components/modals/settings/settings.component.scss
+++ b/src/app/components/modals/settings/settings.component.scss
@@ -1,3 +1,6 @@
+@import "../../../../styles/variables.scss";
+
+
 * {
     box-sizing: border-box;
   }
@@ -13,55 +16,137 @@
   }
 
 .theme {
-    
-      .checkbox {
-        opacity: 0;
-        position: absolute;
-      }
-      
-      .label {
-        width: 50px;
-        height: 26px;
-        background-color:#111;
-        display: flex;
-        border-radius:50px;
-        align-items: center;
-        justify-content: space-between;
-        padding: 5px;
-        position: relative;
-        transform: scale(1.5);
-      }
-      
-      .ball {
-        width: 20px;
-        height: 20px;
-        background-color: white;
-        position: absolute;
-        top: 2px;
-        left: 2px;
-        border-radius: 50%;
-        transition: transform 0.2s linear;
-      }
-      .ball:hover {
-        cursor: pointer;
+  .checkbox {
+    opacity: 0;
+    position: absolute;
+  }
+  
+  .label {
+    width: 50px;
+    height: 26px;
+    background-color:#111;
+    display: flex;
+    border-radius:50px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    position: relative;
+  }
+  
+  .ball {
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    border-radius: 50%;
+    transition: transform 0.2s linear;
+  }
+  .ball:hover {
+    cursor: pointer;
 
-      }
-      
-      /*  target the elemenent after the label*/
-      .checkbox:checked + .label .ball{
-        transform: translateX(24px);
-      }
-      
-      .fa-moon {
-        color: pink;
-      }
-      
-      .fa-sun {
-        color: yellow;
-      }
+  }
+  
+  /*  target the elemenent after the label*/
+  .checkbox:checked + .label .ball{
+    transform: translateX(24px);
+  }
+  
+  .fa-moon {
+    color: pink;
+  }
+  
+  .fa-sun {
+    color: yellow;
+  }
 }
 
 .modal-body .element {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+
+  .margin-20 { 
+    margin-right: 20px;
+  }
+
+  .tag-data {
+    position: relative;
+
+    .color-picker {
+      position: absolute;
+      top: -6px;
+      height: 135%;
+      border: none;
+      background: white;
+      right: 0px;
+      width: 25%;
+      padding: 0;
+      margin: 0;
+      cursor: pointer;
+    }
+
+    .color-picker-icon  {
+      color: white;
+      z-index: 9999999;
+      position: absolute;
+      right: 16px;
+      top: 7px;
+      pointer-events: none;
+    }
+  }
+  .flex-wrap {
+    flex-wrap: wrap;
+  }
+
+  .tag {
+    padding: 2px 10px 2px 10px;
+    color: white;
+    min-height: 30px;
+    border-radius: 25px 0 25px 0;
+    background: green;
+    font-weight: 400;
+    min-width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+  }
+
+  .tag-preview {
+    width: 100%;
     display: flex;
     justify-content: space-between;
+  }
+  
+  .add-tag {
+    background: forestgreen;
+    color: white;
+    opacity: 0.8;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+  }
+
+  .add-tag:hover {
+    opacity: 1;
+  }
+
+  .add-tag-input {
+    padding: 3px 10px 3px 8px;
+    border: 1px solid;
+  }
+
+  .tag-error {
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: $errorColor;
+  }
 }
