Added one more error message for too short tag name

--- a/src/app/components/modals/settings/settings.component.html
+++ b/src/app/components/modals/settings/settings.component.html
@@ -28,8 +28,11 @@
             <button class="btn add-tag" (click)="addTag()"> Add Tag </button>
         </div>
         <div class="tag-error">
-            <div *ngIf="this.showTagError == true" class="error-message">
+            <div *ngIf="this.showEmptyTagError == true" class="error-message">
                 Tag name cannot be empty!
+            </div>
+            <div *ngIf="this.showTagLengthError == true" class="error-message">
+                Tag name cannot have less than 3 characters!
             </div>
         </div>
     </div>
