--- a/src/app/components/modals/settings/settings.component.scss
+++ b/src/app/components/modals/settings/settings.component.scss
@@ -22,7 +22,7 @@
   }
   
   .label {
-    width: 50px;
+    width: 60px;
     height: 26px;
     background-color:#111;
     display: flex;
@@ -34,8 +34,8 @@
   }
   
   .ball {
-    width: 20px;
-    height: 20px;
+    width: 21px;
+    height: 21px;
     background-color: white;
     position: absolute;
     top: 2px;
@@ -43,6 +43,7 @@
     border-radius: 50%;
     transition: transform 0.2s linear;
   }
+
   .ball:hover {
     cursor: pointer;
 
@@ -50,7 +51,7 @@
   
   /*  target the elemenent after the label*/
   .checkbox:checked + .label .ball{
-    transform: translateX(24px);
+    transform: translateX(34px);
   }
   
   .fa-moon {
@@ -122,13 +123,18 @@
   }
   
   .add-tag {
-    background: forestgreen;
+    background: $forestGreen;
     color: white;
     opacity: 0.8;
     height: 30px;
     display: flex;
     align-items: center;
     border-radius: 10px;
+  }
+
+  .add-tag:focus {
+    outline:none;
+    box-shadow: none;
   }
 
   .add-tag:hover {
