--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -11,6 +11,7 @@
         <div id="user-section-dropdown-content" ngbDropdownMenu aria-labelledby="userSectionDropdown">
             <div class="user-dropdown-action" (click)="openAccountModal()"> Account </div>
             <div class="user-dropdown-action" (click)="showSettings()"> Settings </div>
+            <div class="user-dropdown-action" (click)="showTagsList()"> Tags List </div>
             <div class="user-dropdown-action" (click)="logOut()"> Log out </div>
         </div>
     </div>
