Added component to show tags list, and removing tags also works

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,7 +58,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .modal .modal-body {
     max-height: 450px;
-    overflow-y: auto;
+    overflow-x: auto;
 }
 
 .tag-container {
