Add validation error when adding task with empty title

--- a/src/app/components/modals/create-task/create-task.component.scss
+++ b/src/app/components/modals/create-task/create-task.component.scss
@@ -1,3 +1,12 @@
+@import "../../../../styles/variables.scss";
+
 app-tags {
     width: 100%;
+}
+
+.error-message {
+    display: flex;
+    justify-content: end;
+    color: $errorColor;
+    padding-top: 5px;
 }
