--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -7,7 +7,7 @@
       <mat-chip
         *ngFor="let tag of tags"
         (removed)="remove(tag)">
-        {{tag}}
+        {{tag.title != null ? tag.title : tag}}
         <button matChipRemove>
           <mat-icon>cancel</mat-icon>
         </button>
@@ -25,7 +25,7 @@
     
     <mat-autocomplete #autocomplete class="autocomplete-dropdown" #auto="matAutocomplete" (optionSelected)="selected($event)">
       <mat-option *ngFor="let tag of filteredTags | async" [value]="tag">
-        {{tag}}
+        {{tag.title}}
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
