Changed some colors for dark mode. Not finished yet

--- a/src/app/components/modals/settings/settings.component.html
+++ b/src/app/components/modals/settings/settings.component.html
@@ -7,12 +7,7 @@
         <div class="text">
             Application Theme
         </div>
-        <input type="checkbox" class="checkbox" id="checkbox">
-        <label for="checkbox" class="label">
-            <i class="fas fa-moon"></i>
-            <i class='fas fa-sun'></i>
-            <div class='ball'></div>
-        </label>
+        <app-change-theme></app-change-theme>
     </div>
        
     <div class="element flex-wrap">
