--- a/src/styles.scss
+++ b/src/styles.scss
@@ -196,3 +196,41 @@ input:disabled, textarea:disabled {
 .margin-bottom-10 {
     margin-bottom: 10px;
 }
+
+
+:root {
+    --top-navbar-dark: #212529;
+    --primary-dark: #424242;
+    --secondary-dark: #121212;
+    --text-dark: #fff;
+    --header-text-dark: #788791;
+   
+}
+
+.color-scheme-dark {
+    color: var(--text-dark);
+  
+    h1,
+    h2,
+    h3,
+    mat-card-title {
+      color: var(--header-text-dark);
+    }
+
+    .task-manager-container,
+    .modal-content,
+    .autocomplete-dropdown,
+    textarea,
+    input,
+    input:focus {
+        background: var(--primary-dark)!important;
+        color: var(--text-dark)!important;
+
+        label, input,
+        ::placeholder,
+        .mat-option-text,
+        .mat-tab-label-content {
+            color: var(--text-dark)!important;
+        }
+    }
+}
