--- a/src/app/components/lists/lists.component.html
+++ b/src/app/components/lists/lists.component.html
@@ -43,7 +43,7 @@
 
 
 
-<div *ngIf="completedLists" class="completed-dropdown">
+<div *ngIf="completedLists.length > 0" class="completed-dropdown">
     <div class="completed-dropdown-toggle" (click)="toggleCompleted()">
         <div class="list-title completed">
             <i class="fa-solid" [ngClass]="showCompleted== true ? 'fa-caret-down' : 'fa-caret-right'"></i>
