Tags field is no more editable when task is completed

--- a/src/app/components/modals/modify-item/modify-item.component.html
+++ b/src/app/components/modals/modify-item/modify-item.component.html
@@ -19,7 +19,7 @@
     
     <div *ngIf="elementName == ITEM_TYPE.task" class="observations modal-text description-container">
         <label>Tags</label>
-        <app-tags [currentTags]="this.tags" (tagsAdded)="tagsAddedHandler($event)"></app-tags>
+        <app-tags [currentTags]="this.tags" [taskCompleted]="this.status" (tagsAdded)="tagsAddedHandler($event)"></app-tags>
     </div>
 </div>
 <div class="modal-footer">
