File is now uploading in folder (for adding profile picture)

--- a/src/app/components/modals/tags-list/tags-list.component.scss
+++ b/src/app/components/modals/tags-list/tags-list.component.scss
@@ -16,6 +16,9 @@
     min-width: 50px;
     padding: 2px 8px 2px 8px;
     border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 .tags {
