--- a/src/app/components/modals/my-account/my-account.component.html
+++ b/src/app/components/modals/my-account/my-account.component.html
@@ -47,7 +47,8 @@
                         <form action="/api/upload" method="post" enctype="multipart/form-data">
                             <input  (change)="fileChange($event)"  type="file"  class="custom-file-input" name="profile-pic"  id="inputGroupFile01"  aria-describedby="inputGroupFileAddon01">
                         </form>
-                        <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                        <label *ngIf="this.uploadedFile" class="custom-file-label" for="inputGroupFile01">{{this.uploadedFile.name}}</label>
+                        <label *ngIf="!this.uploadedFile" class="custom-file-label" for="inputGroupFile01">Choose file</label>
                     </div>
                 </div>
             </div>
