Tasks can now be paused & resumed

--- a/src/app/components/modals/view-task/view-task.component.html
+++ b/src/app/components/modals/view-task/view-task.component.html
@@ -40,6 +40,15 @@
     </p>
   </div>
 
+  <div *ngIf="task.status == ITEM_STATUS.completed" class="modal-body-text">
+    <div class="title">
+    Working Time
+    </div>
+    <p>
+      {{this.workingTime}}
+    </p>
+  </div>
+
   <div class="modal-body-text">
     <div class="title">
       Tags
