Fixed another backend issue & removed unused console logs

--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -292,7 +292,7 @@
    
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: $darkSpringGreen; 
+    background: $darkSpringGreen!important; 
     border-radius: 10px;
 }
   
