--- a/src/app/components/modals/settings/settings.component.scss
+++ b/src/app/components/modals/settings/settings.component.scss
@@ -75,6 +75,7 @@
 
   .tag-data {
     position: relative;
+    margin-right: 10px;
 
     .color-picker {
       position: absolute;
@@ -121,15 +122,29 @@
     display: flex;
     justify-content: space-between;
   }
-  
-  .add-tag {
-    background: $forestGreen;
+
+  .add-tag, 
+  .import-data,
+  .export-data {
     color: white;
     opacity: 0.8;
     height: 30px;
     display: flex;
     align-items: center;
     border-radius: 10px;
+  }
+  
+  .add-tag {
+    background: $forestGreen;
+  }
+
+  .export-data {
+    background: $darkSpringGreen;
+  }
+
+  .import-data {
+    background: $prussianBlue;
+    margin-right: 10px;
   }
 
   .add-tag:focus {
@@ -155,4 +170,18 @@
     padding-bottom: 5px;
     color: $errorColor;
   }
+}
+
+.item-title {
+  width: 100%;
+  font-weight: 500;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.bottom-section {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  flex-wrap: wrap;
 }
