--- a/src/app/components/modals/settings/settings.component.scss
+++ b/src/app/components/modals/settings/settings.component.scss
@@ -59,18 +59,17 @@
   }
   
   .fa-sun {
-    color: yellow;
+    color: rgb(169, 169, 109);
   }
 }
 
 .modal-body .element {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 
-  .margin-20 { 
-    margin-right: 20px;
+  .margin-top-20 {
+    margin-top: 20px;
   }
 
   .tag-data {
@@ -127,7 +126,6 @@
   .import-data,
   .export-data {
     color: white;
-    opacity: 0.8;
     height: 30px;
     display: flex;
     align-items: center;
@@ -144,16 +142,19 @@
 
   .import-data {
     background: $prussianBlue;
-    margin-right: 10px;
   }
 
-  .add-tag:focus {
+  .add-tag:focus,
+  .import-data:focus,
+  .export-data:focus {
     outline:none;
     box-shadow: none;
   }
 
-  .add-tag:hover {
-    opacity: 1;
+  .add-tag:hover,
+  .export-data:hover,
+  .import-data:not(:disabled):hover {
+    opacity: 0.8;
   }
 
   .add-tag-input {
@@ -173,15 +174,19 @@
 }
 
 .item-title {
-  width: 100%;
   font-weight: 500;
   font-size: 18px;
-  margin-bottom: 20px;
 }
 
 .bottom-section {
   display: flex;
-  width: 100%;
   justify-content: flex-end;
   flex-wrap: wrap;
+}
+
+.export-bottom-section {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 20px;
 }
