--- a/src/app/components/modals/settings/settings.component.scss
+++ b/src/app/components/modals/settings/settings.component.scss
@@ -164,7 +164,7 @@
 
   .tag-error {
     width: 100%;
-    height: 30px;
+    height: auto;
     display: flex;
     justify-content: center;
     padding-top: 5px;
