Added 'Remove tags' in setings (it doesn't delete also the tags of existing tasks)

--- a/src/app/components/modals/settings/settings.component.html
+++ b/src/app/components/modals/settings/settings.component.html
@@ -35,6 +35,14 @@
     </div>
     <div class="element flex-wrap">
         <div class="item-title">
+           Remove all existing tags 
+        </div>
+        <div class="bottom-section">
+            <button class="btn remove-tags" (click)="removeTags()"> Remove Tags </button>
+        </div>
+    </div>
+    <div class="element flex-wrap">
+        <div class="item-title">
             Export data <span style="font-weight: 400;"> (Lists, Tasks, Tags) </span>
         </div>
         <div class="bottom-section">
