--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,19 +2,20 @@
     <div class="work-break">
         <app-work-break></app-work-break>    
     </div>
-    <div ngbDropdown class="user-section" id="userSectionDropdown">
-        <img class="user-small-image"   [src]="this.profilePicture ? this.profilePicture : '//ssl.gstatic.com/accounts/ui/avatar_2x.png'">
-        <div ngbDropdownToggle class="username" >
-            {{ userName }}
-        </div>
-        <div id="user-section-dropdown-content" ngbDropdownMenu aria-labelledby="userSectionDropdown">
-            <div class="user-dropdown-action" (click)="openAccountModal()"> Account </div>
-            <div class="user-dropdown-action" (click)="showSettings()"> Settings </div>
-            <div class="user-dropdown-action" (click)="showTagsList()"> Tags List </div>
-            <div class="user-dropdown-action" (click)="logOut()"> Log out </div>
+    <div class="user-section-wrapper">  
+        <div ngbDropdown class="user-section" id="userSectionDropdown">
+            <img class="user-small-image"   [src]="this.profilePicture ? this.profilePicture : '//ssl.gstatic.com/accounts/ui/avatar_2x.png'">
+            <div ngbDropdownToggle class="username" >
+                {{ userName }}
+            </div>
+            <div id="user-section-dropdown-content" ngbDropdownMenu aria-labelledby="userSectionDropdown">
+                <div class="user-dropdown-action" (click)="openAccountModal()"> Account </div>
+                <div class="user-dropdown-action" (click)="showSettings()"> Settings </div>
+                <div class="user-dropdown-action" (click)="showTagsList()"> Tags List </div>
+                <div class="user-dropdown-action" (click)="logOut()"> Log out </div>
+            </div>
         </div>
     </div>
-
     <div class="row title-row">
         <div class="col-4">
             <div class="title has-text-primary">
