Links found in description and observation fields of a task are now being shown as clickable links

--- a/src/app/components/modals/view-task/view-task.component.html
+++ b/src/app/components/modals/view-task/view-task.component.html
@@ -7,8 +7,7 @@
     <div class="title">
       Description
     </div>
-    <p>
-      {{task.description}}
+    <p [innerHTML]="task.description">
     </p>
   </div>
  
@@ -16,8 +15,7 @@
     <div class="title">
       Observations
     </div>
-    <p>
-      {{task.observations}}
+    <p [innerHTML]="task.observations">
     </p>
   </div>
 
