--- a/src/app/components/modals/view-task/view-task.component.html
+++ b/src/app/components/modals/view-task/view-task.component.html
@@ -4,18 +4,18 @@
 <div class="modal-body">
   
   <div class="modal-body-text">
-    <div class="title" *ngIf="task.description">
+    <div class="title" *ngIf="description">
       Description
     </div>
-    <p [innerHTML]="task.description">
+    <p [innerHTML]="description">
     </p>
   </div>
  
   <div *ngIf="task.status == ITEM_STATUS.completed" class="modal-body-text">
-    <div class="title"  *ngIf="task.observations">
+    <div class="title"  *ngIf="observations">
       Observations
     </div>
-    <p [innerHTML]="task.observations">
+    <p [innerHTML]="observations">
     </p>
   </div>
 
