--- a/src/app/components/modals/my-account/my-account.component.scss
+++ b/src/app/components/modals/my-account/my-account.component.scss
@@ -54,7 +54,7 @@
 
         .btn-primary {
             width: 50%;
-            background: $forestGreen;
+            background: $listColor;
         }
 
         .btn-primary {
