--- a/src/styles.scss
+++ b/src/styles.scss
@@ -200,7 +200,7 @@ input:disabled, textarea:disabled {
 
 :root {
     --top-navbar-dark: #212529;
-    --primary-dark: #424242;
+    --primary-dark: black;
     --secondary-dark: #121212;
     --text-dark: #fff;
     --header-text-dark: #788791; 
