--- a/src/app/components/lists/lists.component.scss
+++ b/src/app/components/lists/lists.component.scss
@@ -36,7 +36,7 @@
             top: -8px;
             font-size: 15px;
             left: 0;
-            color: $prussianBlue;
+            color: $taskColor;
         }
 
         .progress {
@@ -51,12 +51,8 @@
 
     .dropdown-toggle {
         font-size: 22px;
-        color: $darkSpringGreen;
+        color: $taskColor;
         margin-top: 5px;
-    }
-
-    .dropdown-toggle:hover {
-        color: $listColor;
     }
 
     .dropdown-toggle::after {
@@ -101,7 +97,7 @@
 }
 
 .modify {
-    color: $prussianBlue;
+    color: $taskColor;
 }
 
 .complete {
@@ -136,7 +132,7 @@
     }
    
     .completed {
-        color: $darkSpringGreen;
+        color: $listColor;
     }
 
     .list-title i {
@@ -156,7 +152,7 @@
 
 .completed-dropdown-area {
     .list {
-        color: $darkSpringGreen;
+        color: $listColor;
     }
 
     .list:hover {
